force-app/main/default/objects/ssot__JobPostingSearchableField__dlm/fields/ssot__OccupationGroupId__c.field-meta.xml
<CustomField>
    <fullName>ssot__OccupationGroupId__c</fullName>
    <label>Occupation Group</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OccupationGroupId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>