force-app/main/default/objects/ssot__JobPostingSearchableField__dlm/fields/ssot__OccupationGroupName__c.field-meta.xml
<CustomField>
    <fullName>ssot__OccupationGroupName__c</fullName>
    <label>Occupation Group Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OccupationGroupName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>