force-app/main/default/objects/ssot__JobPostingSearchableField__dlm/fields/ssot__OccupationName__c.field-meta.xml
<CustomField>
    <fullName>ssot__OccupationName__c</fullName>
    <label>Occupation Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OccupationName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>