force-app/main/default/objects/ssot__JobPostingSearchableField__dlm/fields/ssot__PositionDescription__c.field-meta.xml
<CustomField>
    <fullName>ssot__PositionDescription__c</fullName>
    <label>Position Description</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PositionDescription</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>