force-app/main/default/objects/ssot__JobPostingSearchableField__dlm/fields/ssot__PositionSensitivity__c.field-meta.xml
<CustomField>
    <fullName>ssot__PositionSensitivity__c</fullName>
    <label>Position Sensitivity</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PositionSensitivity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>