force-app/main/default/objects/ssot__JobPostingSearchableField__dlm/fields/ssot__PositionType__c.field-meta.xml
<CustomField>
    <fullName>ssot__PositionType__c</fullName>
    <label>Position Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PositionType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>