force-app/main/default/objects/ssot__JobPostingSearchableField__dlm/fields/ssot__RecruitmentPostingId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RecruitmentPostingId__c</fullName>
    <label>Recruitment Posting</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RecruitmentPostingId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>