force-app/main/default/objects/ssot__JobPostingSearchableField__dlm/fields/ssot__rel_1741334817916_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1741334817916_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JobPostingSearchableField_Recruitmen_rel</label>
    <referenceTo>ssot__RecruitmentRequisition__dlm</referenceTo>
    <relationshipLabel>JobPostingSearchableField_Recruitmen_rel</relationshipLabel>
    <relationshipName>rel_1741334817916_end</relationshipName>
    <type>Lookup</type>
</CustomField>