force-app/main/default/objects/ssot__JobPostingSearchableField__dlm/fields/ssot__rel_1741334820490_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1741334820490_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JobPostingSearchableField_Occupation_rel</label>
    <referenceTo>ssot__Occupation__dlm</referenceTo>
    <relationshipLabel>JobPostingSearchableField_Occupation_rel</relationshipLabel>
    <relationshipName>rel_1741334820490_end</relationshipName>
    <type>Lookup</type>
</CustomField>