force-app/main/default/objects/ssot__JobPostingSearchableField__dlm/fields/ssot__UniqueKeyText__c.field-meta.xml
<CustomField>
    <fullName>ssot__UniqueKeyText__c</fullName>
    <label>Unique Key</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UniqueKeyText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>