force-app/main/default/objects/ssot__JobPostingSearchableField__dlm/fields/ssot__VacancyCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__VacancyCount__c</fullName>
    <label>Vacancy Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>VacancyCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>