force-app/main/default/objects/ssot__JobPostingSearchableField__dlm/fields/ssot__WorkScheduleType__c.field-meta.xml
<CustomField>
    <fullName>ssot__WorkScheduleType__c</fullName>
    <label>Work Schedule Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>WorkScheduleType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>